# marlin

./: .codecov.yml  .gitignore  .lgtm.yml  .ycm_extra_conf.py  LICENSE  Makefile  README.md  TODO.md  codecov.yml  settings.json
.circleci/: config.yml
misc/: README.md
misc/docker/ubuntu18.04/: Dockerfile  README.md
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  analyzer.c  analyzer.h  default_analyzer.c  whitespace_analyzer.c  word.c  word.h
src/inc/: common.h  dbi.h  khash.h  ksort.h  kstring.h  kvec.h  platform.h  url.h
src/main/: CMakeLists.txt  aggs.c  aggs.h  aggs_common.c  aggs_common.h  api.c  api.h  app.c  app.h  bkt-aggs.h  bmap.c  bmap.h  cont.c  cont.h  debug.c  debug.h  docrank.c  docrank.h  dtrie.c  dtrie.h  filter.c  filter.h  filter_apply.c  filter_apply.h  hashtable.c  hashtable.h  highlight.c  highlight.h  index.c  index.h  keys.h  main.c  mapping.c  mapping.h  marlin.c  marlin.h  mbmap.c  mbmap.h  metric-aggs.c  metric-aggs.h  (+20 more)
src/utils/: CMakeLists.txt  base64.c  flakeid.c  flakeid.h  mlog.c  mlog.h  utils.c  utils.h
test/: data_gen.py  facet.txt  profile.sh  stress.py  test.py
test/py/: pytests.py
test/robot/: README.md  aggs.robot  common.robot  connect.robot  crud.robot  doc.json  docset.json  document.robot  facet.robot  filter.robot  filter_apply.robot  highlight.robot  levenshtein.robot  limit.robot  query.robot  rank.robot  rank2.robot  rank3.robot  rank4.robot  rank5.robot  rank6.robot  rank7.robot  rank_terms.robot  sort.robot  terms.robot
test/wrk/: README.md  reddit.lua
